add CSS styling to make page look like notepad

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
   </head>
   <body>
      <div class="container">
-       <h1>To do list</h1>
+       <div class="jumbotron">
+         <h1>To Do List</h1>
+       </div>
        <div class="row">
          <div class="col-md-6">
-           <h2>Add a Thing:</h2>
+           <h2>Add A Task:</h2>
            <form id="new-thing">
              <div class="form-group">
-               <label for="new-thing">List item</label>
+               <label for="new-thing">To Do Item</label>
                <input type="text" class="form-control" id="new-thing">
              </div>
              <div class="form-group">
-               <label for="new-date">Compete by date</label>
+               <label for="new-date">Complete By</label>
                <input type="text" class="form-control" id="new-date">
              </div>
              <button type="submit" class="btn">Add</button>
